syntax = "proto3";

package pgde.error;

option go_package = "github.com/empirefox/protoc-gen-dart-ext/pkg/pgde/error;error";

message OperateError {
  int32 code = 1;
  string message = 2;
}

message SubmitError {
  repeated int32 path = 1;
  int32 code = 2;
  string message = 3;
}